--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,11 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th 
-        %a#title_header Movie Title
+      %th#title_header{class: @class_title}= link_to "Movie Title", movies_path(:sort => "title")
       %th Rating
-      %th 
-        %a#release_date_header Release Date
+      %th#release_date_header{class: @class_release_date}= link_to "Release Date", movies_path(:sort => "release_date")
       %th More Info
   %tbody
     - @movies.each do |movie|
